TokBox Tutorial 100% compatible

--- a/openvidu-sample-app/src/main/resources/frontend/src/app/components/video-session/video-session.component.html
+++ b/openvidu-sample-app/src/main/resources/frontend/src/app/components/video-session/video-session.component.html
@@ -5,5 +5,5 @@
     <md-icon class="right-btn" (click)="toggleLocalAudio()" [title]="'Toggle audio'">{{audioIcon}}</md-icon>
     <h1>{{lesson?.title}}</h1>
 </div>
-<div id="local-stream"></div>
-<div id="remote-streams"></div>
+<div id="publisher"></div>
+<div id="subscriber"></div>
