openvidu-server dashboard loopback video testing first version

--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,7 @@
+#dashboard-div {
+  padding: 20px;
+}
+
 #log {
   height: 100%;
 }
@@ -11,4 +15,8 @@
 
 ul {
   margin: 0;
+}
+
+md-card-title a {
+  float: right;  
 }
