--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,11 +1,27 @@
-<md-card id="log">
-  <md-card-title>Server events</md-card-title>
-  <md-divider></md-divider>
-  <md-card-content #scrollMe id="log-content">
-    <md-list>
-      <md-list-item *ngFor="let i of info">
-        <p>{{i}}</p>
-      </md-list-item>
-    </md-list>
-  </md-card-content>
-</md-card>
+<div id="dashboard-div" fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px" fxFlexFill>
+
+  <div fxLayout="column" fxFlex="66%" fxFlexOrder="1" fxFlexOrder.xs="2">
+    <md-card id="log">
+      <md-card-title>Server events</md-card-title>
+      <md-divider></md-divider>
+      <md-card-content #scrollMe id="log-content">
+        <md-list>
+          <md-list-item *ngFor="let i of info">
+            <p>{{i}}</p>
+          </md-list-item>
+        </md-list>
+      </md-card-content>
+    </md-card>
+  </div>
+
+  <div fxLayout="column" fxFlex="33%" fxFlexOrder="2" fxFlexOrder.xs="1">
+    <md-card id="video-loop">
+      <md-card-title>Test the connection<a md-raised-button (click)="testVideo()">Test</a></md-card-title>
+      <md-card-content #scrollMe id="log-content">
+        <div id="local-video"></div>
+        <div id="mirrored-video"></div>
+      </md-card-content>
+    </md-card>
+  </div>
+
+</div>
