--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@
 }
 
 #log {
-  height: 100%;
+  height: 90%;
 }
 
 #log-content {
@@ -17,6 +17,195 @@ ul {
   margin: 0;
 }
 
-md-card-title a {
-  float: right;  
+button.mat-raised-button {
+  text-transform: uppercase;
+  float: right;
+}
+
+md-card-title button.blue {
+  color: #ffffff;
+  background-color: #0088aa;
+}
+
+md-card-title button.yellow {
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffcc00;
+}
+
+md-spinner {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#tick-div {
+  width: 100px;
+  height: 100px;
+  z-index: 1;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#tooltip-tick {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.circ {
+  opacity: 0;
+  stroke-dasharray: 130;
+  stroke-dashoffset: 130;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+
+.tick {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  -webkit-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -moz-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -ms-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -o-transition: stroke-dashoffset 1s 0.5s ease-out;
+  transition: stroke-dashoffset 1s 0.5s ease-out;
+}
+
+.drawn+svg .path {
+  opacity: 1;
+  stroke-dashoffset: 0;
+}
+
+
+/* Pure CSS loader */
+
+#loader {
+  width: 100px;
+  height: 100px;
+  z-index: 1;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+#loader * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#loader ::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#loader ::before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.loader-1 {
+  height: 100px;
+  width: 100px;
+  -webkit-animation: loader-1-1 4.8s linear infinite;
+  animation: loader-1-1 4.8s linear infinite;
+}
+
+@-webkit-keyframes loader-1-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes loader-1-1 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-1 span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  height: 100px;
+  width: 100px;
+  clip: rect(0, 100px, 100px, 50px);
+  -webkit-animation: loader-1-2 1.2s linear infinite;
+  animation: loader-1-2 1.2s linear infinite;
+}
+
+@-webkit-keyframes loader-1-2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(220deg);
+  }
+}
+
+@keyframes loader-1-2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(220deg);
+  }
+}
+
+.loader-1 span::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  height: 100px;
+  width: 100px;
+  clip: rect(0, 100px, 100px, 50px);
+  border: 8px solid #4d4d4d;
+  border-radius: 50%;
+  -webkit-animation: loader-1-3 1.2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+  animation: loader-1-3 1.2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+}
+
+@-webkit-keyframes loader-1-3 {
+  0% {
+    -webkit-transform: rotate(-140deg);
+  }
+  50% {
+    -webkit-transform: rotate(-160deg);
+  }
+  100% {
+    -webkit-transform: rotate(140deg);
+  }
+}
+
+@keyframes loader-1-3 {
+  0% {
+    transform: rotate(-140deg);
+  }
+  50% {
+    transform: rotate(-160deg);
+  }
+  100% {
+    transform: rotate(140deg);
+  }
 }
