--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
@@ -2,14 +2,18 @@
 
   <div fxLayout="column" fxFlex="66%" fxFlexOrder="1" fxFlexOrder.xs="2">
     <md-card id="log">
-      <md-card-title>Server events</md-card-title>
+      <md-card-title>Server events
+        <md-slide-toggle title="Lock Scroll" [(ngModel)]="lockScroll" style="float: right; margin-left: auto;">
+          <md-icon>lock_outline</md-icon>
+        </md-slide-toggle>
+      </md-card-title>
       <md-divider></md-divider>
       <md-card-content #scrollMe id="log-content">
-        <md-list>
-          <md-list-item *ngFor="let i of info">
+        <ul>
+          <li *ngFor="let i of info">
             <p>{{i}}</p>
-          </md-list-item>
-        </md-list>
+          </li>
+        </ul>
       </md-card-content>
     </md-card>
   </div>
@@ -17,11 +21,12 @@
   <div fxLayout="column" fxFlex="33%" fxFlexOrder="2" fxFlexOrder.xs="1">
     <md-card id="video-loop">
       <md-card-title>Test the connection
-        <button [class]="testStatus == 'DISCONNECTED' ? 'blue' : (testStatus == 'PLAYING' ? 'yellow' : 'disabled')" md-raised-button (click)="toggleTestVideo()" [disabled]="testStatus==='CONNECTING' || testStatus==='CONNECTED'">{{testButton}}</button></md-card-title>
+        <button [class]="testStatus == 'DISCONNECTED' ? 'blue' : (testStatus == 'PLAYING' ? 'yellow' : 'disabled')" md-raised-button
+          (click)="toggleTestVideo()" [disabled]="testStatus==='CONNECTING' || testStatus==='CONNECTED'">{{testButton}}</button></md-card-title>
       <md-card-content #scrollMe id="log-content">
         <div id="mirrored-video">
           <div *ngIf="showSpinner" id="loader">
-          <div class="loader-1 center"><span></span></div>
+            <div class="loader-1 center"><span></span></div>
           </div>
           <!--<md-spinner *ngIf="showSpinner" [color]="color"></md-spinner>-->
           <div *ngIf="session" id="tick-div">
