openvidu-server dashboard improved

--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.html
@@ -42,6 +42,7 @@
             </svg>
           </div>
         </div>
+        <div id="msg-chain"><p *ngFor="let msg of msgChain">{{msg}}</p></div>
       </md-card-content>
     </md-card>
   </div>
