--- a/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/openvidu-server/src/angular/frontend/src/app/components/dashboard/dashboard.component.css
@@ -34,7 +34,7 @@ md-card-title button.yellow {
 
 md-spinner {
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -44,7 +44,7 @@ md-spinner {
   height: 100px;
   z-index: 1;
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -82,6 +82,10 @@ md-spinner {
   stroke-dashoffset: 0;
 }
 
+#mirrored-video {
+  position: relative;
+}
+
 
 /* Pure CSS loader */
 
@@ -90,7 +94,7 @@ md-spinner {
   height: 100px;
   z-index: 1;
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
