--- a/openvidu-testapp/src/app/components/dashboard/dashboard.component.html
+++ b/openvidu-testapp/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,8 @@
-<md-tab-group class="demo-tab-group" dynamicHeight="true">
+<md-form-field class="example-full-width">
+  <input mdInput placeholder="OpenVidu Server URL" [(ngModel)]="openviduURL">
+</md-form-field>
+
+<md-tab-group class="demo-tab-group" dynamicHeight="true" selectedIndex="5">
   <md-tab id="audio-video" label="Audio + Video">
     <div class="demo-tab-content">
 
@@ -18,11 +22,72 @@
     </div>
   </md-tab>
   <md-tab id="screen-only" label="Screen only">
-
+    <div class="demo-tab-content">
+    </div>
   </md-tab>
   <md-tab id="api-rest" label="API REST">
-      <button md-raised-button color="primary" (click)="getSessionId()">Get sessionId</button>
-      <button md-raised-button color="primary" (click)="getToken()">Get token</button>
+    <div class="demo-tab-content">
+      <md-form-field>
+        <input mdInput placeholder="OpenVidu Server Secret" [(ngModel)]="openviduSecret">
+      </md-form-field>
+      <button md-raised-button color="primary" (click)="cleanAllSessions()" style="float: right">Clean sessions</button>
+
+      <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start space-around">
+        <div fxLayout="column" fxFlex="50" fxFlexAlign="center" fxFill>
+          <button md-raised-button color="primary" (click)="getSessionId()">Get sessionId</button>
+        </div>
+        <div fxLayout="column" fxFlex="50" fxFlexAlign="center" fxFill>
+          <button md-raised-button color="primary" (click)="getToken()" [disabled]="getTokenDisabled()">Get token</button>
+        </div>
+      </div>
+
+      <div id="table-row" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start">
+        <div fxLayout="column" fxFlex="65" fxFlexAlign="start" fxFill>
+          <table>
+            <tr>
+              <th class="first-col">sessionIds</th>
+              <th>tokens</th>
+              <th>Session</th>
+            </tr>
+            <tr *ngFor="let sid of this.data; let ind = index">
+              <td class="first-col">
+                <md-card [style.background]="getBackgroundColor(ind)">{{sid[0]}}</md-card>
+              </td>
+              <td>
+                <md-card *ngIf="sid[1].length > 0" [style.background]="getBackgroundColor(ind)">
+                  <p *ngFor="let token of sid[1]">{{token}}</p>
+                </md-card>
+              </td>
+              <td style="text-align: center">
+                <md-radio-button [checked]="selectedRadioIndex === ind" (click)="selectedRadioIndex = ind" name="sidOption"></md-radio-button>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div fxLayout="column" fxFlex="35" fxFlexAlign="start" fxFill>
+          <table>
+            <tr>
+              <th>OpenVidu Role</th>
+              <th>Server data</th>
+            </tr>
+            <tr id="tr-token-options" *ngIf="data.length > 0">
+              <td>
+                <md-select placeholder="OpenVidu Role" [(ngModel)]="selectedRole">
+                  <md-option *ngFor="let role of openViduRoles" [value]="role">
+                    {{ role }}
+                  </md-option>
+                </md-select>
+              </td>
+              <td>
+                <md-form-field id="server-data-field">
+                  <input mdInput placeholder="Server Data" [(ngModel)]="serverData">
+                </md-form-field>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
   </md-tab>
 </md-tab-group>
 
