--- a/openvidu-testapp/src/app/components/dashboard/dashboard.component.css
+++ b/openvidu-testapp/src/app/components/dashboard/dashboard.component.css
@@ -27,99 +27,31 @@ th {
 }
 
 md-card {
-	font-weight: bold;
+  background-color: rgba(77, 77, 77, 0.05);
 }
 
-#join-dialog h1 {
-  color: #4d4d4d;
-  font-weight: bold;
-  text-align: center;
+.join-card {
+  width: fit-content;
+  margin: auto;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
-#img-div {
-  text-align: center;
-  position: absolute;
-  top: 19%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.full-width {
+  width: 100%;
 }
 
-#img-div img {
-  height: 15%;
-}
-
-#join-dialog label {
-  color: #0088aa;
-}
-
-#join-dialog input.btn {
-  margin-top: 15px;
-}
-
-#session-header {
-  margin-bottom: 20px;
-}
-
-#session-title {
-  display: inline-block;
-}
-
-#buttonLeaveSession {
-  float: right;
+.inner-card {
+  border: 1px solid #e1e1e1;
+  padding: 16px;
+  background: #ffffff;
   margin-top: 20px;
 }
 
-#video-container video {
-  position: relative;
-  float: left;
-  cursor: pointer;
+.inner-card h4 {
+  margin-top: 0;
 }
 
-#video-container p {
-  display: inline-block;
-  background: #f8f8f8;
-  padding-right: 5px;
-  padding-left: 5px;
-  color: #777777;
-  font-weight: bold;
-  border-bottom-right-radius: 4px;
-}
-
-video {
-  width: 100%;
-  height: auto;
-}
-
-#main-video p {
-  position: absolute;
-  display: inline-block;
-  background: #f8f8f8;
-  padding-right: 5px;
-  padding-left: 5px;
-  left: 0;
-  font-size: 22px;
-  color: #777777;
-  font-weight: bold;
-  border-bottom-right-radius: 4px;
-}
-
-#main-video video {
-  cursor: initial;
-}
-
-#session img {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  object-fit: contain;
-  vertical-align: baseline;
-}
-
-#session #video-container img {
-  position: relative;
-  float: left;
-  width: 50%;
-  cursor: pointer;
-  object-fit: cover;
-  height: 180px;
+.inner-card md-radio-group {
+  padding-left: 20px;
 }
