--- a/openvidu-testapp/src/app/components/dashboard/dashboard.component.html
+++ b/openvidu-testapp/src/app/components/dashboard/dashboard.component.html
@@ -10,73 +10,25 @@
 
   <md-tab id="audio-video" label="Test session">
     <div class="demo-tab-content">
-
-      <div fxLayout="row" fxLayoutGap="20px" fxFlex="40" fxLayoutAlign="start start">
-        <md-card class="join-card">
-          <md-card-title>Join a session</md-card-title>
-          <md-card-content>
-            <form>
-              <md-form-field class="full-width">
-                <input mdInput placeholder="Client data" name="clientData" [(ngModel)]="clientData">
-              </md-form-field>
-              <md-form-field class="full-width">
-                <input mdInput placeholder="Session name" name="sessionName" [(ngModel)]="sessionName">
-              </md-form-field>
-              <div class="inner-card">
-                <h4>Send...</h4>
-                <p>
-                  <md-checkbox [(ngModel)]="sendVideo" name="sendVideo">Video</md-checkbox>
-                </p>
-                <p>
-                  <md-radio-group [(ngModel)]="optionVideo" name="optionVideo" [disabled]="!sendVideo">
-                    <md-radio-button value="video">Video</md-radio-button>
-                    <md-radio-button value="screen">Screen</md-radio-button>
-                  </md-radio-group>
-                </p>
-                <p>
-                  <md-checkbox [(ngModel)]="sendAudio" name="sendAudio">Audio</md-checkbox>
-                </p>
-              </div>
-              <div class="inner-card">
-                <h4>Enter with active...</h4>
-                <md-checkbox [(ngModel)]="activeVideo" name="activeVideo" [disabled]="!sendVideo">Video</md-checkbox>
-                <md-checkbox [(ngModel)]="activeAudio" name="activeAudio" [disabled]="!sendAudio">Audio</md-checkbox>
-              </div>
-            </form>
-          </md-card-content>
-          <md-card-actions>
-            <button md-button id="join-btn" (click)="joinSession()">JOIN</button>
-          </md-card-actions>
-        </md-card>
+      <div>
+        <button id="add-user-btn" md-raised-button color="primary" (click)="users.push(true)">ADD USER</button>
+        <button id="remove-user-btn" md-raised-button color="primary" (click)="users.pop()" [disabled]="!users.length">REMOVE USER</button>
       </div>
-
-      <div *ngIf="session" fxLayout="row" fxLayoutGap="20px" fxFlex="60" fxLayoutAlign="start start">
-        <div id="session">
-          <div id="session-header">
-            <h1 id="session-title">{{sessionName}}</h1>
-            <button md-raised-button color="warn" (click)="leaveSession()">Leave session</button>
-          </div>
-          <div id="video-container"></div>
-        </div>
-      </div>
+      <app-openvidu-instance *ngFor="let user of users" [openviduURL]="openviduURL" [openviduSecret]="openviduSecret"></app-openvidu-instance>
     </div>
   </md-tab>
-
-  <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start space-around">
-
-  </div>
 
   <md-tab id="api-rest" label="API REST">
     <div class="demo-tab-content">
       <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start space-around">
         <div fxLayout="column" fxFlex="45" fxFlexAlign="center" fxFill>
-          <button md-raised-button color="primary" (click)="getSessionId()">Get sessionId</button>
+          <button md-raised-button color="primary" (click)="getSessionId()">GET SESSIONID</button>
         </div>
         <div fxLayout="column" fxFlex="45" fxFlexAlign="center" fxFill>
-          <button md-raised-button color="primary" (click)="getToken()" [disabled]="getTokenDisabled()">Get token</button>
+          <button md-raised-button color="primary" (click)="getToken()" [disabled]="getTokenDisabled()">GET TOKEN</button>
         </div>
         <div fxLayout="column" fxFlex="10" fxFlexAlign="center" fxFill>
-          <button md-raised-button color="warn" (click)="cleanAllSessions()" [disabled]="data.length == 0">Clean sessions</button>
+          <button md-raised-button color="warn" (click)="cleanAllSessions()" [disabled]="data.length == 0">CLEAN</button>
         </div>
       </div>
 
