--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -1,69 +1,81 @@
-<div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start stretch">
+<div>
+  <md-card class="join-card">
 
-  <div fxFlex="noshrink">
-    <md-card class="join-card">
+    <md-card-content>
+      <form class="session-form">
 
-      <md-card-content>
-        <form class="session-form">
-
+        <div>
           <md-form-field style="margin-right: 10px">
-            <input mdInput placeholder="Session name" name="sessionName" [(ngModel)]="sessionName">
+            <input mdInput placeholder="Session name" name="sessionName" [(ngModel)]="sessionName" [disabled]="session">
           </md-form-field>
 
           <md-form-field>
-            <input mdInput placeholder="Client data" name="clientData" [(ngModel)]="clientData">
+            <input mdInput placeholder="Client data" name="clientData" [(ngModel)]="clientData" [disabled]="session">
           </md-form-field>
+        </div>
 
-          <div class="inner-card" fxLayout="row" fxLayoutWrap="wrap">
+        <div>
+          <button id="join-btn" md-button (click)="joinSession()" [disabled]="session">JOIN</button>
+          <md-checkbox [(ngModel)]="subscribeTo" name="subscribeTo" [disabled]="session">Subscribe</md-checkbox>
+          <md-checkbox [(ngModel)]="publishTo" name="publishTo" (click)="toggleRadio()" [disabled]="session">Publish</md-checkbox>
+        </div>
 
-            <div fxFlex="60">
+        <div class="inner-card" fxLayout="row" fxLayoutAlign="start start">
+
+          <div fxFlex="60">
+            <div>
+              <h4>Send</h4>
               <div>
-                <h4>Send...</h4>
-                <div>
-                  <md-checkbox id="send-audio-check" [(ngModel)]="sendAudio" name="sendAudio" class="input-right">Audio</md-checkbox>
-                  <md-checkbox id="send-video-check" [(ngModel)]="sendVideo" name="sendVideo" (click)="toggleRadio()">Video</md-checkbox>
-                </div>
-              </div>
-              <div style="padding-top: 5px;">
-                <h4>Enter with<br>active...</h4>
-                <div>
-                  <md-checkbox id="active-audio-check" [(ngModel)]="activeAudio" name="activeAudio" [checked]="sendAudio" [disabled]="!sendAudio"
-                    class="input-right">Audio</md-checkbox>
-                  <md-checkbox id="active-video-check" [(ngModel)]="activeVideo" name="activeVideo" [checked]="sendVideo" [disabled]="!sendVideo">Video</md-checkbox>
-                </div>
+                <md-checkbox name="sendAudio" [(ngModel)]="sendAudio" [disabled]="!publishTo || session" [checked]="sendAudio && publishTo">Audio</md-checkbox>
+                <md-checkbox name="sendVideo" [(ngModel)]="sendVideo" [disabled]="!publishTo || session" [checked]="sendVideo && publishTo"
+                  (click)="toggleRadio()">Video</md-checkbox>
               </div>
             </div>
-
-            <div fxFlex="40">
-              <md-radio-group [(ngModel)]="optionVideo" name="optionVideo" [disabled]="!sendVideo">
-                <md-radio-button id="send-video-radio" value="video" [checked]="sendVideo || sendVideoRadio">Video</md-radio-button>
-                <md-radio-button id="send-screen-radio" value="screen" [checked]="sendVideo && !sendVideoRadio" class="input-right">Screen</md-radio-button>
-              </md-radio-group>
+            <div style="padding-top: 5px;">
+              <h4>Enter active</h4>
+              <div>
+                <md-checkbox name="activeAudio" [(ngModel)]="activeAudio" [disabled]="!sendAudio || !publishTo || session" [checked]="activeAudio && sendAudio && publishTo">Audio</md-checkbox>
+                <md-checkbox name="activeVideo" [(ngModel)]="activeVideo" [disabled]="!sendVideo || !publishTo || session" [checked]="activeVideo && sendVideo && publishTo">Video</md-checkbox>
+              </div>
             </div>
-
           </div>
 
-        </form>
-      </md-card-content>
+          <div fxFlex="40">
+            <md-radio-group [(ngModel)]="optionVideo" [disabled]="!sendVideo || !publishTo || session" [ngModelOptions]="{standalone: true}">
+              <div>
+                <md-radio-button value="video" [checked]="publishTo && sendVideo">Video</md-radio-button>
+              </div>
+              <div>
+                <md-radio-button value="screen" [checked]="publishTo && sendVideo && optionVideo==='screen'">Screen</md-radio-button>
+              </div>
+            </md-radio-group>
+            <md-checkbox class="subscribe-remote-check" name="subscribeToRemote" [(ngModel)]="subscribeToRemote" [disabled]="(!sendAudio && !sendVideo) || !publishTo || session"
+              [checked]="(sendAudio || sendVideo) && publishTo && subscribeToRemote">Subscribe<br>to remote</md-checkbox>
+          </div>
 
-      <md-card-actions>
-        <button id="join-session-btn" md-button (click)="joinSession()" [disabled]="session">JOIN SESSION</button>
-      </md-card-actions>
+        </div>
 
-    </md-card>
-  </div>
+      </form>
+    </md-card-content>
 
-  <div *ngIf="session" fxFlex>
-    <md-card>
-      {{sessionName}}
-      <button md-mini-fab color="warn" (click)="leaveSession()">
-        <md-icon class="md-24" aria-label="Leave icon">clear</md-icon>
-      </button>
-      <div *ngIf="session.connection" fxLayout>
-        <div [attr.id]="'local-vid-' + session.connection.connectionId" fxFlex="135px" class="video-container"></div>
-        <div [attr.id]="'remote-vid-' + session.connection.connectionId" fxFlex="270px" class="video-container"></div>
+  </md-card>
+</div>
+
+<div *ngIf="session">
+  <md-card class="session-card">
+    <div class="session-card-header">
+      <div class="session-card-inner">
+        <div class="session-title">{{sessionName}}</div>
+        <div class="session-actions">
+          <button><md-icon class="md-24" aria-label="Mute video button" (click)="toggleVideo()">{{videoIcon}}</md-icon></button>
+          <button><md-icon class="md-24" aria-label="Mute audio button" (click)="toggleAudio()">{{audioIcon}}</md-icon></button>
+          <button><md-icon class="md-24" aria-label="Leave button" (click)="leaveSession()">clear</md-icon></button>
+        </div>
       </div>
-    </md-card>
-  </div>
-
+    </div>
+    <div *ngIf="session.connection" fxLayout>
+      <div [attr.id]="'local-vid-' + session.connection.connectionId" fxFlex="135px" class="video-container"></div>
+      <div [attr.id]="'remote-vid-' + session.connection.connectionId" fxFlex="270px" class="video-container"></div>
+    </div>
+  </md-card>
 </div>
